--- a/1-aninhamento-variaveis-interpolacao/index.html
+++ b/1-aninhamento-variaveis-interpolacao/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Sass</title>
+		<title>Aninhamento, variáveis e interpolação</title>
 		<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	</head>
 	<body>
